<resources>
    <string name="app_name">Auth Via Firebase</string>
    <string name="privacy_policy">By signing up, you agree to Photo’s <u>Terms of Service</u> and <u>Privacy Policy</u>.</string>
    <string name="the_jane">the_jane</string>
    <string name="register">Register</string>
    <string name="next">NEXT</string>
    <string name="log_in">Log in</string>
    <string name="email">jane@example.com</string>
    <string name="password">••••••••••••</string>
    <string name="sign_up">SIGN Up</string>
    <string name="title_activity_logged_in">LoggedInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">welcome</string>
    <string name="log_out">log Out</string>
</resources>